<resources>
    <string name="app_name">PlexPlayerExample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="system_summary">

    </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="defaults_header">Application Defaults</string>
    <string name="plex_status">Plex connection status</string>

    <!-- Messages Preferences -->
    <string name="plexamp_port">Default Port for this App</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="plex_linked">Plex Linked</string>
    <string name="link_plex_to_app">Link your Plex Account to App</string>
    <string name="link_on_message">Switch "off" and we will remove the current link</string>
    <string name="link_off_message">Switch "on" and we will generate a token and bring you to the plex website to link your account</string>
    <string name="ipAddress">127.0.0.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ipAddressPrompt">ipAddress:</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="status_display">Not Linked</string>
    <string name="token">YOUR_PLEX_TOKEN</string>
    <string name="plex_port_key">port</string>
    <string name="plex_port_title">Plex Port:</string>
    <string name="plex_port">32501</string>
    <string name="Title">Plex Player Android Reference UI</string>
    <string name="album_art">Album Art goes here</string>
    <string name="product_name">DEVCE_NAME_HERE</string>
    <string name="product_name_key">name</string>
    <string name="product_name_title">Plex Player Name:</string>
</resources>