<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/defaults_header">

        <EditTextPreference
            app:key="@string/plex_port_key"
            app:title="@string/plex_port_title"
            app:summary="@string/plex_port"
            app:defaultValue="@string/plex_port"
            />

        <EditTextPreference
            app:key="@string/product_name_key"
            app:title="@string/product_name_title"
            app:summary="@string/product_name"
            app:defaultValue="@string/product_name"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/plex_status">

        <SwitchPreferenceCompat
            app:key="plex_linked"
            app:summaryOff="@string/link_off_message"
            app:summaryOn="@string/link_on_message"
            app:title="@string/link_plex_to_app" />

    </PreferenceCategory>

</PreferenceScreen>